Add a trick to prevent unstyled content on FF

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -70,6 +70,7 @@
     />
   </head>
   <body class="">
+    <script>0</script>
     <% if (config.apis && config.apis.gtm) { %>
       <!-- Google Tag Manager (noscript) -->
       <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=<%- config.apis.gtm %>"
