--- a/layout/page.ejs
+++ b/layout/page.ejs
@@ -31,7 +31,7 @@
     </div>
 
     <div class="nav-group right">
-      <% Object.entries(config.nav_links).forEach(function ([title, link]) { %>
+      <% Object.entries(config.nav_links || {}).forEach(function ([title, link]) { %>
         <div class="nav-item show-desktop <%- link.active && 'active' %> <%- link.separator && 'separator' %>">
           <a class="link" href="<%- link.url || link %>" <%- link.target && 'target=' + link.target %> >
             <span><%- title %></span>
