--- a/layout/partials/sidebar.ejs
+++ b/layout/partials/sidebar.ejs
@@ -60,7 +60,7 @@
           <span><%- config.logo.title %> <%- config.logo.subtitle %></span>
         </a>
       </div>
-      <% Object.entries(config.nav_links).forEach(function ([title, link]) { %>
+      <% Object.entries(config.nav_links || {}).forEach(function ([title, link]) { %>
         <div class="panel-item <%- link.active && 'active' %>">
           <a class="" href="<%- link.url || link %>" <%- link.target && 'target=' + link.target %> >
             <span><%- title %></span>
